feat(Self): 添加文明视图查询，修改
